Finish 2.Feature Engineering

--- a/DM2021-Lab2-Homework.ipynb
+++ b/DM2021-Lab2-Homework.ipynb
@@ -1042,7 +1042,7 @@
    "metadata": {},
    "source": [
     "## 2. Feature Engineering\n",
-    "### Using Bag of Words"
+    "### 2.0 Sample and train/val split "
    ]
   },
   {
@@ -1051,12 +1051,91 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import CountVectorizer"
+    "# sample 10,000 datas\n",
+    "\n",
+    "train_sample = train_df.sample(n=10000, random_state=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 3)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_sample.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split data into training and testing set\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = train_sample['text']\n",
+    "y = train_sample['emotion']\n",
+    "\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.20, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train (8000,)\n",
+      "y_train (8000,)\n",
+      "X_test (2000,)\n",
+      "y_test (2000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# see the shape of the data\n",
+    "\n",
+    "print('X_train', X_train.shape)\n",
+    "print('y_train', y_train.shape)\n",
+    "print('X_test', X_val.shape)\n",
+    "print('y_test', y_val.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 Using Bag of Words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,31 +1145,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. Learn a vocabulary dictionary of all tokens in the raw documents.\n",
-    "BOW_vectorizer.fit(train_df['text'])\n",
+    "BOW_vectorizer.fit(X_train)\n",
     "\n",
     "# 2. Transform documents to document-term matrix.\n",
-    "train_data_BOW_features = BOW_vectorizer.transform(train_df['text'])\n",
-    "test_data_BOW_features = BOW_vectorizer.transform(test_df['text'])"
+    "train_data_BOW_features = BOW_vectorizer.transform(X_train)\n",
+    "test_data_BOW_features = BOW_vectorizer.transform(X_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<1455563x794247 sparse matrix of type '<class 'numpy.int64'>'\n",
-       "\twith 18849355 stored elements in Compressed Sparse Row format>"
+       "<8000x19058 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 103411 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1190,7 @@
        "scipy.sparse.csr.csr_matrix"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,41 +1201,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nNotice: Easily to cause died kernel\\n'"
+       "array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# # add .toarray() to show\n",
-    "# train_data_BOW_features.toarray()\n",
-    "\n",
-    "'''\n",
-    "Notice: Easily to cause died kernel\n",
-    "'''"
+    "train_data_BOW_features.toarray()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1455563, 794247)"
+       "(8000, 19058)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1182,19 +1263,19 @@
     {
      "data": {
       "text/plain": [
-       "['005',\n",
-       " '00533321',\n",
-       " '00575',\n",
-       " '00578',\n",
-       " '005796',\n",
-       " '005e5n',\n",
-       " '006',\n",
-       " '0060',\n",
-       " '007',\n",
-       " '00786mujahid']"
+       "['152640260316',\n",
+       " '152641584275',\n",
+       " '1531',\n",
+       " '153kgs',\n",
+       " '1541',\n",
+       " '1552',\n",
+       " '159',\n",
+       " '15am',\n",
+       " '15daysofchristmas',\n",
+       " '15m']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1207,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1297,7 @@
        "False"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1226,8 +1307,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Use nltk tokenize"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1241,10 +1329,10 @@
     {
      "data": {
       "text/plain": [
-       "(1455563, 500)"
+       "(8000, 500)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,9 +1344,9 @@
     "BOW_500 = CountVectorizer(max_features=500, tokenizer=nltk.word_tokenize) \n",
     "\n",
     "# apply analyzer to training data\n",
-    "BOW_500.fit(train_df['text'])\n",
+    "BOW_500.fit(X_train)\n",
     "\n",
-    "train_data_BOW_features_500 = BOW_500.transform(train_df['text'])\n",
+    "train_data_BOW_features_500 = BOW_500.transform(X_train)\n",
     "\n",
     "## check dimension\n",
     "train_data_BOW_features_500.shape"
@@ -1266,25 +1354,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['can',\n",
-       " 'car',\n",
-       " 'care',\n",
+       "array([[1, 1, 0, ..., 0, 0, 0],\n",
+       "       [0, 1, 0, ..., 0, 0, 0],\n",
+       "       [0, 3, 0, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [1, 0, 0, ..., 0, 0, 0],\n",
+       "       [2, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 3, 0, ..., 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data_BOW_features_500.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['care',\n",
        " 'change',\n",
        " 'christ',\n",
        " 'christmas',\n",
        " 'closed',\n",
        " 'come',\n",
        " 'comes',\n",
-       " 'coming']"
+       " 'coming',\n",
+       " 'content',\n",
+       " 'could']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1297,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1420,7 @@
        "True"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1319,53 +1433,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model\n",
+    "## Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3.1 Decision Tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
+    "# from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
-    "# for a classificaiton problem, you need to provide both training & testing data\n",
-    "X_train = BOW_500.transform(train_df['text'])\n",
-    "y_train = train_df['emotion']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'emotion'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3360\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3361\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3362\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'emotion'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/6f/q9sz35290v37yyrlzm58ztmh0000gn/T/ipykernel_50278/1180117610.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mX_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBOW_500\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'text'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'emotion'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3456\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3457\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3458\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3459\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3460\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3361\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3362\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3363\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3364\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3365\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0misna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhasnans\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'emotion'"
-     ]
-    }
-   ],
-   "source": [
-    "X_test = BOW_500.transform(test_df['text'])\n",
-    "y_test = test_df['emotion']"
+    "# # for a classificaiton problem, you need to provide both training & testing data\n",
+    "# X_train = BOW_500.transform(train_df['text'])\n",
+    "# y_train = train_df['emotion']"
    ]
   },
   {
@@ -1374,11 +1462,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## take a look at data dimension is a good habbit  :)\n",
-    "print('X_train.shape: ', X_train.shape)\n",
-    "print('y_train.shape: ', y_train.shape)\n",
-    "print('X_test.shape: ', X_test.shape)\n",
-    "print('y_test.shape: ', y_test.shape)"
+    "# X_test = BOW_500.transform(test_df['text'])\n",
+    "# # y_test = test_df['emotion']    # No y_test"
    ]
   },
   {
@@ -1387,18 +1472,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## build DecisionTree model\n",
-    "DT_model = DecisionTreeClassifier(random_state=0)\n",
+    "# ## take a look at data dimension is a good habbit  :)\n",
+    "# print('X_train.shape: ', X_train.shape)\n",
+    "# print('y_train.shape: ', y_train.shape)\n",
+    "# print('X_test.shape: ', X_test.shape)\n",
+    "# # print('y_test.shape: ', y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ## build DecisionTree model\n",
+    "# DT_model = DecisionTreeClassifier(random_state=0)\n",
     "\n",
-    "## training!\n",
-    "DT_model = DT_model.fit(X_train, y_train)\n",
+    "# ## training!\n",
+    "# DT_model = DT_model.fit(X_train, y_train)\n",
     "\n",
-    "## predict!\n",
-    "y_train_pred = DT_model.predict(X_train)\n",
-    "y_test_pred = DT_model.predict(X_test)\n",
+    "# ## predict!\n",
+    "# y_train_pred = DT_model.predict(X_train)\n",
+    "# y_test_pred = DT_model.predict(X_test)\n",
     "\n",
-    "## so we get the pred result\n",
-    "y_test_pred[:10]"
+    "# ## so we get the pred result\n",
+    "# y_test_pred[:10]"
    ]
   }
  ],
