ready to run RF

--- a/DM2021-Lab2-Homework.ipynb
+++ b/DM2021-Lab2-Homework.ipynb
@@ -1316,9 +1316,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "with all training data, TFIDF features.\n",
-    "training accuracy: 0.89\n",
-    "testing accuracy: 0.42"
+    "* with all training data, TFIDF features.  \n",
+    "training accuracy: 0.89  \n",
+    "testing accuracy: 0.42  "
    ]
   },
   {
@@ -1712,7 +1712,7 @@
    "source": [
     "path = 'Result/'\n",
     "filename = 'NB_TFIDF500.csv'\n",
-    "submission.to_csv(path+filename, index=False)\n",
+    "# submission.to_csv(path+filename, index=False)\n",
     "print('Saved file: ' + filename)"
    ]
   },
