ready to run RF

--- a/DM2021-Lab2-Homework.ipynb
+++ b/DM2021-Lab2-Homework.ipynb
@@ -1397,7 +1397,7 @@
     }
    ],
    "source": [
-    "y_train_pred, y_val_pred = DecisionTree()"
+    "y_train_pred, y_val_pred = RandomForest()"
    ]
   },
   {
@@ -1710,10 +1710,10 @@
     }
    ],
    "source": [
-    "path = 'Result/'\n",
-    "filename = 'NB_TFIDF500.csv'\n",
+    "# path = 'Result/'\n",
+    "# filename = 'NB_TFIDF500.csv'\n",
     "# submission.to_csv(path+filename, index=False)\n",
-    "print('Saved file: ' + filename)"
+    "# print('Saved file: ' + filename)"
    ]
   },
   {
