--- a/DM2021-Lab2-Homework.ipynb
+++ b/DM2021-Lab2-Homework.ipynb
@@ -89,7 +89,7 @@
     "import pandas as pd\n",
     "import json\n",
     "\n",
-    "# df = pd.read_json(\"dm2021-lab2-hw2/tweets_DM.json\",lines=True, orient='columns')"
+    "df = pd.read_json(\"dm2021-lab2-hw2/tweets_DM.json\",lines=True, orient='columns')"
    ]
   },
   {
@@ -98,8 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Show df\n",
-    "# df.head()"
+    "# Show df\n",
+    "df.head()"
    ]
   },
   {
@@ -108,14 +108,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # select '_source' column as 'source'\n",
-    "# source = df._source\n",
+    "# select '_source' column as 'source'\n",
+    "source = df._source\n",
     "\n",
-    "# # normalize 'source'\n",
-    "# twit = pd.json_normalize(source)\n",
+    "# normalize 'source'\n",
+    "twit = pd.json_normalize(source)\n",
     "\n",
-    "# # show twit\n",
-    "# twit.head()"
+    "# show twit\n",
+    "twit.head()"
    ]
   },
   {
@@ -124,10 +124,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # rename column for merge later\n",
+    "# rename column for merge later\n",
     "\n",
-    "# twit = twit.rename(columns={\"tweet.hashtags\": \"hashtags\", \"tweet.tweet_id\": \"tweet_id\", \"tweet.text\": \"text\"})\n",
-    "# twit.head()"
+    "twit = twit.rename(columns={\"tweet.hashtags\": \"hashtags\", \"tweet.tweet_id\": \"tweet_id\", \"tweet.text\": \"text\"})\n",
+    "twit.head()"
    ]
   },
   {
@@ -136,11 +136,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # to split train test\n",
-    "# # read file 'data_identification.csv'\n",
+    "# to split train test\n",
+    "# read file 'data_identification.csv'\n",
     "\n",
-    "# iden = pd.read_csv('dm2021-lab2-hw2/data_identification.csv')\n",
-    "# iden.head()"
+    "iden = pd.read_csv('dm2021-lab2-hw2/data_identification.csv')\n",
+    "iden.head()"
    ]
   },
   {
@@ -149,10 +149,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # merge twit dataframe with data_identification.csv\n",
+    "# merge twit dataframe with data_identification.csv\n",
     "\n",
-    "# total = pd.merge(twit, iden, on=\"tweet_id\", how=\"left\")\n",
-    "# total.head()"
+    "total = pd.merge(twit, iden, on=\"tweet_id\", how=\"left\")\n",
+    "total.head()"
    ]
   },
   {
@@ -161,10 +161,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # categorize the data into two set, train and test.\n",
+    "# categorize the data into two set, train and test.\n",
     "\n",
-    "# train = total[total[\"identification\"] == \"train\"]\n",
-    "# test = total[total[\"identification\"] == \"test\"]"
+    "train = total[total[\"identification\"] == \"train\"]\n",
+    "test = total[total[\"identification\"] == \"test\"]"
    ]
   },
   {
@@ -173,10 +173,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # drop hashtags column and identification column, since we will not use it\n",
+    "# drop hashtags column and identification column, since we will not use it\n",
     "\n",
-    "# train = train.drop(columns=['hashtags', 'identification'])\n",
-    "# test = test.drop(columns=['hashtags', 'identification'])"
+    "train = train.drop(columns=['hashtags', 'identification'])\n",
+    "test = test.drop(columns=['hashtags', 'identification'])"
    ]
   },
   {
@@ -185,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train.head()"
+    "train.head()"
    ]
   },
   {
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test.head()"
+    "test.head()"
    ]
   },
   {
@@ -203,9 +203,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # read the labels\n",
-    "# emo = pd.read_csv('dm2021-lab2-hw2/emotion.csv')\n",
-    "# emo.head()"
+    "# read the labels\n",
+    "emo = pd.read_csv('dm2021-lab2-hw2/emotion.csv')\n",
+    "emo.head()"
    ]
   },
   {
@@ -214,10 +214,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # merge train with emotions.csv\n",
+    "# merge train with emotions.csv\n",
     "\n",
-    "# train = pd.merge(train, emo, on=\"tweet_id\", how=\"left\")\n",
-    "# train.head()"
+    "train = pd.merge(train, emo, on=\"tweet_id\", how=\"left\")\n",
+    "train.head()"
    ]
   },
   {
@@ -226,10 +226,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # see the shape of the data\n",
+    "# see the shape of the data\n",
     "\n",
-    "# print(\"train shape :\", train.shape)\n",
-    "# print(\"test shape :\", test.shape)"
+    "print(\"train shape :\", train.shape)\n",
+    "print(\"test shape :\", test.shape)"
    ]
   },
   {
@@ -245,10 +245,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # save to pickle file\n",
+    "# save to pickle file\n",
     "\n",
-    "# train.to_pickle(\"train_df.pkl\") \n",
-    "# test.to_pickle(\"test_df.pkl\")"
+    "train.to_pickle(\"train_df.pkl\") \n",
+    "test.to_pickle(\"test_df.pkl\")"
    ]
   },
   {
@@ -288,9 +288,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#group to find distribution\n",
+    "# group to find distribution\n",
     "\n",
-    "# train_df.groupby(['emotion']).count()['text']"
+    "train_df.groupby(['emotion']).count()['text']"
    ]
   },
   {
@@ -299,25 +299,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %matplotlib inline\n",
-    "# import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# # the histogram of the data\n",
-    "# labels = train_df['emotion'].unique()\n",
-    "# post_total = len(train_df)\n",
-    "# df1 = train_df.groupby(['emotion']).count()['text']\n",
-    "# df1 = df1.apply(lambda x: round(x*100/post_total,3))\n",
+    "# the histogram of the data\n",
+    "labels = train_df['emotion'].unique()\n",
+    "post_total = len(train_df)\n",
+    "df1 = train_df.groupby(['emotion']).count()['text']\n",
+    "df1 = df1.apply(lambda x: round(x*100/post_total,3))\n",
     "\n",
-    "# #plot\n",
-    "# fig, ax = plt.subplots(figsize=(10,5))\n",
-    "# plt.bar(df1.index,df1.values)\n",
+    "#plot\n",
+    "fig, ax = plt.subplots(figsize=(10,5))\n",
+    "plt.bar(df1.index,df1.values)\n",
     "\n",
-    "# #arrange\n",
-    "# plt.ylabel('% of instances')\n",
-    "# plt.xlabel('Emotion')\n",
-    "# plt.title('Emotion distribution')\n",
-    "# plt.grid(True)\n",
-    "# plt.show()"
+    "#arrange\n",
+    "plt.ylabel('% of instances')\n",
+    "plt.xlabel('Emotion')\n",
+    "plt.title('Emotion distribution')\n",
+    "plt.grid(True)\n",
+    "plt.show()"
    ]
   },
   {
@@ -334,7 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train_df.shape"
+    "train_df.shape"
    ]
   },
   {
@@ -359,12 +359,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # see the shape of the data\n",
+    "# see the shape of the data\n",
     "\n",
-    "# print('X_train', X_train.shape)\n",
-    "# print('y_train', y_train.shape)\n",
-    "# print('X_val', X_val.shape)\n",
-    "# print('y_val', y_val.shape)"
+    "print('X_train', X_train.shape)\n",
+    "print('y_train', y_train.shape)\n",
+    "print('X_val', X_val.shape)\n",
+    "print('y_val', y_val.shape)"
    ]
   },
   {
