--- a/DM2021-Lab2-Homework.ipynb
+++ b/DM2021-Lab2-Homework.ipynb
@@ -67,6 +67,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Lab2 Take Home Exercise\n",
+    "Please see the link: https://github.com/honey0703/DM2021-Lab2-master/blob/main/DM2021_Lab2_master.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Report\n",
     "## 1. Data Preparation\n",
     "1.1 Load data  \n",
